--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        r-version: [3.5]
+        r-version: ["3.5.2"]
 
     env:
       # Define CI to skip some test case.
@@ -44,48 +44,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up R ${{ matrix.r-version }}
-        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
           extra-repositories: 'https://mran.microsoft.com/snapshot/2019-02-01'
-
-      - name: Install dependencies
-        working-directory: ./R
-        run: |
-          install.packages(c("remotes", "rcmdcheck"))
-          remotes::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
-      - name: Check
-        working-directory: ./R
-        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
-        shell: Rscript {0}
-
-  Python:
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.7]
-
-    env:
-      DATABASE: ${{ secrets.DATABASE }}_Python
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      working-directory: ./Python
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        pip install -r requirements.txt
-    - name: Run build script
-      working-directory: ./Python
-      run: ./buildandinstall.cmd
-    - name: Test with pytest
-      working-directory: ./Python/tests
-      run: |
-        pytest
