add step to install R dependencies with r-lib v2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,3 +48,8 @@ jobs:
         with:
           r-version: ${{ matrix.r-version }}
           extra-repositories: 'https://mran.microsoft.com/snapshot/2019-02-01'
+
+      - name: Install R Package Dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 2
