--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,3 +51,6 @@ jobs:
 
       - name: Install R Package Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 1
+          working-directory: ./R
