--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,3 +56,5 @@ jobs:
           working-directory: ./R
           extra-packages: rcmdcheck
       - uses: r-lib/actions/check-r-package@v2
+        with:
+          working-directory: ./R
