--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,13 +47,17 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+          extra-repositories: 'https://mran.microsoft.com/snapshot/2019-02-01'
 
       - name: Install R Package Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
           cache-version: 1
           working-directory: ./R
-          extra-packages: rcmdcheck
+          extra-packages: |
+            rcmdcheck
+            any::ODBC
+          
       - uses: r-lib/actions/check-r-package@v2
         with:
           working-directory: ./R
