--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up R ${{ matrix.r-version }}
+      - name: Set up R ${{ matrix.r-version }} Runtime
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
