odbc case sensitivity

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
           working-directory: ./R
           extra-packages: |
             rcmdcheck
-            any::ODBC
+            any::odbc
           
       - uses: r-lib/actions/check-r-package@v2
         with:
