--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,7 @@ jobs:
           working-directory: ./R
           extra-packages: |
             rcmdcheck
+          needs:
             any::odbc
           
       - uses: r-lib/actions/check-r-package@v2
