--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,14 +47,17 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+          #Utilize package snapshot to align with SQL Server R version 3.5.2
           extra-repositories: 'https://mran.microsoft.com/snapshot/2019-02-01'
 
       - name: Install R Package Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          cache-version: 2
+          cache-version: 1
           working-directory: ./R
           extra-packages:
+            #Retrieves most recent odbc pkg from cran to avoid errors seen in older versions.
+            #Updated odbc pkg is still compatible with R >= 3.2.0
             cran::odbc
             rcmdcheck
           
